# AutoScouter

./: +1stream-youtube.py  +2get_info.py  +3video_detection.py  +4cleanup.py  +5sheets_testing.py  +bluealliance.py  +cleanup.py  +current.txt  +detectionwithtext.py  +formatted.csv  +get_info.py  +jsondump.json  +output.txt  +scoreincrement.json  +stream-twitch.py  +video_detection.py  .gitignore  2025azgl_qm1_cycles.csv  2025azgl_qm1_data.json  2025azgl_qm1_paths.txt  2025azgl_qm2_cycles.csv  2025azgl_qm2_data.json  2025azgl_qm2_paths.txt  2025azgl_qm3_cycles.csv  2025azgl_qm3_data.json  2025azgl_qm3_paths.txt  2025azgl_qm4_cycles.csv  2025azgl_qm4_data.json  2025azgl_qm4_paths.txt  2025azgl_qm5_data.json  2025cave_f1m1_cycles.csv  2025cave_f1m1_data.json  2025cave_f1m1_paths.txt  LICENSE  README.md  bad2025cave_f1m1_paths.txt  capture-video.py  capture_video.py  cleanup-test.py  cleanup.py  (+35 more)
data/: current.txt  super-secret-API-key.txt
events/: 2025azgl.json  2025capt.json
matches/: thisiswherethematchesgo.txt
old/: 2025cave_f1m1_data.json  2025cave_f1m1_paths.txt
teams/1323/: recentkeys.json
teams/5026/: recentkeys.json
tests/: getTBA.py  sheets_testing.py  systemtests.py  trim_vid.py
