[tool.poetry]
name = "autoscouter"
version = "0.1.0"
description = "A tool for automated scouting"
authors = ["TinyElephant56"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
streamlink = "^7.1.3"
moviepy = "^2.1.2"
opencv-python = "^4.11.0.86"
numpy = ">=1.23.0,<=2.1.1"
ultralytics = "^8.3.88"
easyocr = "^1.7.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
