[project]
name = "comptracker"
version = "0.1.0"
description = "scouts robots for 2025 frc"
authors = [
    {name = "crhaine",email = "crhaine@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "anyio (==4.9.0)",
    "attrs (==25.1.0)",
    "backports-tarfile (==1.2.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.8.30)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.0)",
    "cleo (==2.1.0)",
    "contourpy (==1.3.0)",
    "crashtest (==0.4.1)",
    "cryptography (==44.0.1)",
    "cycler (==0.12.1)",
    "decorator (==5.2.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "easyocr (==1.7.2)",
    "exceptiongroup (==1.2.2)",
    "fastjsonschema (==2.21.1)",
    "ffmpeg-python (==0.2.0)",
    "filelock (==3.16.1)",
    "filetype (==1.2.0)",
    "findpython (==0.6.3)",
    "fonttools (==4.54.1)",
    "fsspec (==2024.10.0)",
    "future (==1.0.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.7)",
    "imageio (==2.37.0)",
    "imageio-ffmpeg (==0.6.0)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "isodate (==0.7.2)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jinja2 (==3.1.4)",
    "jwt (==1.3.1)",
    "keyboard (==0.13.5)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.7)",
    "lazy-loader (==0.4)",
    "lxml (==5.3.1)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.9.2)",
    "more-itertools (==10.6.0)",
    "moviepy (==2.1.2)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.0)",
    "networkx (==3.4.2)",
    "ninja (==1.11.1.3)",
    "numpy (==1.26.4)",
    "opencv-python (==4.10.0.84)",
    "opencv-python-headless (==4.10.0.84)",
    "outcome (==1.3.0.post0)",
    "packaging (==24.1)",
    "pandas (==2.2.3)",
    "pbs-installer (==2025.3.17)",
    "pillow (==10.4.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "poetry (==2.1.1)",
    "poetry-core (==2.1.1)",
    "proglog (==0.1.10)",
    "psutil (==6.1.0)",
    "py-cpuinfo (==9.0.0)",
    "pyclipper (==1.3.0.post6)",
    "pycountry (==24.6.1)",
    "pycparser (==2.22)",
    "pycryptodome (==3.21.0)",
    "pygyat (==1.0.6b0)",
    "pyjwt (==2.10.1)",
    "pyobjc (==11.0)",
    "pyobjc-core (==11.0)",
    "pyobjc-framework-accessibility (==11.0)",
    "pyobjc-framework-accounts (==11.0)",
    "pyobjc-framework-addressbook (==11.0)",
    "pyobjc-framework-adservices (==11.0)",
    "pyobjc-framework-adsupport (==11.0)",
    "pyobjc-framework-applescriptkit (==11.0)",
    "pyobjc-framework-applescriptobjc (==11.0)",
    "pyobjc-framework-applicationservices (==11.0)",
    "pyobjc-framework-apptrackingtransparency (==11.0)",
    "pyobjc-framework-audiovideobridging (==11.0)",
    "pyobjc-framework-authenticationservices (==11.0)",
    "pyobjc-framework-automaticassessmentconfiguration (==11.0)",
    "pyobjc-framework-automator (==11.0)",
    "pyobjc-framework-avfoundation (==11.0)",
    "pyobjc-framework-avkit (==11.0)",
    "pyobjc-framework-avrouting (==11.0)",
    "pyobjc-framework-backgroundassets (==11.0)",
    "pyobjc-framework-browserenginekit (==11.0)",
    "pyobjc-framework-businesschat (==11.0)",
    "pyobjc-framework-calendarstore (==11.0)",
    "pyobjc-framework-callkit (==11.0)",
    "pyobjc-framework-carbon (==11.0)",
    "pyobjc-framework-cfnetwork (==11.0)",
    "pyobjc-framework-cinematic (==11.0)",
    "pyobjc-framework-classkit (==11.0)",
    "pyobjc-framework-cloudkit (==11.0)",
    "pyobjc-framework-cocoa (==11.0)",
    "pyobjc-framework-collaboration (==11.0)",
    "pyobjc-framework-colorsync (==11.0)",
    "pyobjc-framework-contacts (==11.0)",
    "pyobjc-framework-contactsui (==11.0)",
    "pyobjc-framework-coreaudio (==11.0)",
    "pyobjc-framework-coreaudiokit (==11.0)",
    "pyobjc-framework-corebluetooth (==11.0)",
    "pyobjc-framework-coredata (==11.0)",
    "pyobjc-framework-corehaptics (==11.0)",
    "pyobjc-framework-corelocation (==11.0)",
    "pyobjc-framework-coremedia (==11.0)",
    "pyobjc-framework-coremediaio (==11.0)",
    "pyobjc-framework-coremidi (==11.0)",
    "pyobjc-framework-coreml (==11.0)",
    "pyobjc-framework-coremotion (==11.0)",
    "pyobjc-framework-coreservices (==11.0)",
    "pyobjc-framework-corespotlight (==11.0)",
    "pyobjc-framework-coretext (==11.0)",
    "pyobjc-framework-corewlan (==11.0)",
    "pyobjc-framework-cryptotokenkit (==11.0)",
    "pyobjc-framework-datadetection (==11.0)",
    "pyobjc-framework-devicecheck (==11.0)",
    "pyobjc-framework-devicediscoveryextension (==11.0)",
    "pyobjc-framework-dictionaryservices (==11.0)",
    "pyobjc-framework-discrecording (==11.0)",
    "pyobjc-framework-discrecordingui (==11.0)",
    "pyobjc-framework-diskarbitration (==11.0)",
    "pyobjc-framework-dvdplayback (==11.0)",
    "pyobjc-framework-eventkit (==11.0)",
    "pyobjc-framework-exceptionhandling (==11.0)",
    "pyobjc-framework-executionpolicy (==11.0)",
    "pyobjc-framework-extensionkit (==11.0)",
    "pyobjc-framework-externalaccessory (==11.0)",
    "pyobjc-framework-fileprovider (==11.0)",
    "pyobjc-framework-fileproviderui (==11.0)",
    "pyobjc-framework-findersync (==11.0)",
    "pyobjc-framework-fsevents (==11.0)",
    "pyobjc-framework-gamecenter (==11.0)",
    "pyobjc-framework-gamecontroller (==11.0)",
    "pyobjc-framework-gamekit (==11.0)",
    "pyobjc-framework-gameplaykit (==11.0)",
    "pyobjc-framework-healthkit (==11.0)",
    "pyobjc-framework-imagecapturecore (==11.0)",
    "pyobjc-framework-inputmethodkit (==11.0)",
    "pyobjc-framework-installerplugins (==11.0)",
    "pyobjc-framework-instantmessage (==11.0)",
    "pyobjc-framework-intents (==11.0)",
    "pyobjc-framework-intentsui (==11.0)",
    "pyobjc-framework-iobluetooth (==11.0)",
    "pyobjc-framework-iobluetoothui (==11.0)",
    "pyobjc-framework-iosurface (==11.0)",
    "pyobjc-framework-ituneslibrary (==11.0)",
    "pyobjc-framework-kernelmanagement (==11.0)",
    "pyobjc-framework-latentsemanticmapping (==11.0)",
    "pyobjc-framework-launchservices (==11.0)",
    "pyobjc-framework-libdispatch (==11.0)",
    "pyobjc-framework-libxpc (==11.0)",
    "pyobjc-framework-linkpresentation (==11.0)",
    "pyobjc-framework-localauthentication (==11.0)",
    "pyobjc-framework-localauthenticationembeddedui (==11.0)",
    "pyobjc-framework-mailkit (==11.0)",
    "pyobjc-framework-mapkit (==11.0)",
    "pyobjc-framework-mediaaccessibility (==11.0)",
    "pyobjc-framework-mediaextension (==11.0)",
    "pyobjc-framework-medialibrary (==11.0)",
    "pyobjc-framework-mediaplayer (==11.0)",
    "pyobjc-framework-mediatoolbox (==11.0)",
    "pyobjc-framework-metal (==11.0)",
    "pyobjc-framework-metalfx (==11.0)",
    "pyobjc-framework-metalkit (==11.0)",
    "pyobjc-framework-metalperformanceshaders (==11.0)",
    "pyobjc-framework-metalperformanceshadersgraph (==11.0)",
    "pyobjc-framework-metrickit (==11.0)",
    "pyobjc-framework-mlcompute (==11.0)",
    "pyobjc-framework-modelio (==11.0)",
    "pyobjc-framework-multipeerconnectivity (==11.0)",
    "pyobjc-framework-naturallanguage (==11.0)",
    "pyobjc-framework-netfs (==11.0)",
    "pyobjc-framework-network (==11.0)",
    "pyobjc-framework-networkextension (==11.0)",
    "pyobjc-framework-notificationcenter (==11.0)",
    "pyobjc-framework-opendirectory (==11.0)",
    "pyobjc-framework-osakit (==11.0)",
    "pyobjc-framework-oslog (==11.0)",
    "pyobjc-framework-passkit (==11.0)",
    "pyobjc-framework-pencilkit (==11.0)",
    "pyobjc-framework-phase (==11.0)",
    "pyobjc-framework-photos (==11.0)",
    "pyobjc-framework-photosui (==11.0)",
    "pyobjc-framework-preferencepanes (==11.0)",
    "pyobjc-framework-pushkit (==11.0)",
    "pyobjc-framework-quartz (==11.0)",
    "pyobjc-framework-quicklookthumbnailing (==11.0)",
    "pyobjc-framework-replaykit (==11.0)",
    "pyobjc-framework-safariservices (==11.0)",
    "pyobjc-framework-safetykit (==11.0)",
    "pyobjc-framework-scenekit (==11.0)",
    "pyobjc-framework-screencapturekit (==11.0)",
    "pyobjc-framework-screensaver (==11.0)",
    "pyobjc-framework-screentime (==11.0)",
    "pyobjc-framework-scriptingbridge (==11.0)",
    "pyobjc-framework-searchkit (==11.0)",
    "pyobjc-framework-security (==11.0)",
    "pyobjc-framework-securityfoundation (==11.0)",
    "pyobjc-framework-securityinterface (==11.0)",
    "pyobjc-framework-sensitivecontentanalysis (==11.0)",
    "pyobjc-framework-servicemanagement (==11.0)",
    "pyobjc-framework-sharedwithyou (==11.0)",
    "pyobjc-framework-sharedwithyoucore (==11.0)",
    "pyobjc-framework-shazamkit (==11.0)",
    "pyobjc-framework-social (==11.0)",
    "pyobjc-framework-soundanalysis (==11.0)",
    "pyobjc-framework-speech (==11.0)",
    "pyobjc-framework-spritekit (==11.0)",
    "pyobjc-framework-storekit (==11.0)",
    "pyobjc-framework-symbols (==11.0)",
    "pyobjc-framework-syncservices (==11.0)",
    "pyobjc-framework-systemconfiguration (==11.0)",
    "pyobjc-framework-systemextensions (==11.0)",
    "pyobjc-framework-threadnetwork (==11.0)",
    "pyobjc-framework-uniformtypeidentifiers (==11.0)",
    "pyobjc-framework-usernotifications (==11.0)",
    "pyobjc-framework-usernotificationsui (==11.0)",
    "pyobjc-framework-videosubscriberaccount (==11.0)",
    "pyobjc-framework-videotoolbox (==11.0)",
    "pyobjc-framework-virtualization (==11.0)",
    "pyobjc-framework-vision (==11.0)",
    "pyobjc-framework-webkit (==11.0)",
    "pyparsing (==3.2.0)",
    "pyproject-hooks (==1.2.0)",
    "pysocks (==1.7.1)",
    "pytesseract (==0.3.13)",
    "python-bidi (==0.6.6)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytube (==15.0.0)",
    "pytz (==2024.2)",
    "pyyaml (==6.0.2)",
    "rapidfuzz (==3.12.2)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "roboflow (==1.1.48)",
    "scikit-image (==0.25.2)",
    "scipy (==1.14.1)",
    "seaborn (==0.13.2)",
    "shapely (==2.0.7)",
    "shellingham (==1.5.4)",
    "six (==1.16.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "streamlink (==7.1.3)",
    "sympy (==1.13.1)",
    "tifffile (==2025.2.18)",
    "tomli (==2.2.1)",
    "tomlkit (==0.13.2)",
    "torch (==2.5.1)",
    "torchaudio (==2.5.1)",
    "torchvision (==0.20.1)",
    "tqdm (==4.66.6)",
    "trio (==0.29.0)",
    "trio-websocket (==0.12.2)",
    "trove-classifiers (==2025.3.19.19)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)",
    "ultralytics (==8.3.28)",
    "ultralytics-thop (==2.0.10)",
    "urllib3 (==2.2.3)",
    "virtualenv (==20.29.3)",
    "websocket-client (==1.8.0)",
    "wsproto (==1.2.0)",
    "xattr (==1.1.4)",
    "yt-dlp (==2024.11.4)",
    "zipp (==3.21.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
